--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,6 +13,14 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 
+
+  {{!-- amcharts cdn--}}
+  <script src="https://www.amcharts.com/lib/4/core.js"></script>
+  <script src="https://www.amcharts.com/lib/4/charts.js"></script>
+  <script src="https://www.amcharts.com/lib/4/plugins/timeline.js"></script>
+  <script src="https://www.amcharts.com/lib/4/plugins/bullets.js"></script>
+  <script src="https://www.amcharts.com/lib/4/themes/animated.js"></script>
+
   <link href="/assets/css/style.css" rel="stylesheet">
 
 </head>
@@ -20,6 +28,7 @@
 <body>
   {{{body}}}
   <script src="/assets/js/index.js"></script>
+  <script src="/assets/js/chart_timeline.js"></script>
 </body>
 
 </html>
