intro of budget functionality

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,7 +16,7 @@
             Administration
         </div>
         <div class="menu">
-            <a class="item">
+            <a href="budget" class="item">
                 <div><i class="cogs icon"></i>Budget</div>
             </a>
             <a class="item">
