--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,6 +20,8 @@
 <body>
   {{{body}}}
   <script src="/assets/js/index.js"></script>
+  <script type="text/javascript" src="/assets/js/budget.js"></script>
+
 </body>
 
 </html>
