--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,14 +21,22 @@
   <script src="https://www.amcharts.com/lib/4/plugins/bullets.js"></script>
   <script src="https://www.amcharts.com/lib/4/themes/animated.js"></script>
 
+
+  {{!-- chart.js --}}
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
+
+  {{!-- custom stylesheet --}}
   <link href="/assets/css/style.css" rel="stylesheet">
 
 </head>
 
 <body>
   {{{body}}}
-  <script src="/assets/js/index.js"></script>
-  <script src="/assets/js/chart_timeline.js"></script>
 </body>
 
 </html>
