--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -28,7 +28,7 @@
                 <a class="item" href="/budget">
                     <div><i class="cogs icon"></i>Budget</div>
                 </a>
-                <a class="item">
+                <a class="item" href="/expenses">
                     <div><i class="users icon"></i>Expenses</div>
                 </a>
             </div>
