JS file connected to api route but not displaying value of each budget and expense

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -65,7 +65,7 @@
                     </div>
 
                     <div class="ui tiny purple inverted progress">
-                        <div class="bar" style="width: 54%"></div>
+                        <div class="bar" id="Bills" style="width: 54%"></div>
                         <div class="label">Bills</div>
                     </div>
 
